Fix: Explicitly allow crm domain in CORS configuration to resolve login issues